--- a/solar_control/config.yaml
+++ b/solar_control/config.yaml
@@ -21,7 +21,7 @@ options:
 schema:
   message: "str?"
   hass_url: "str?"
-image: "chrismelba/{arch}-addon-solar-control"
+image: "solar-control-{arch}"
 panel_icon: "mdi:solar-power"
 panel_admin: true
 startup: application
