--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 # https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
-name: Solar Optimiser Repository
-url: 'https://github.com/chrismelba/solar-control'
-maintainer: chrismelba
+name: Example Home Assistant add-on repository
+url: 'https://github.com/home-assistant/addons-example'
+maintainer: Awesome Maintainer <awesome@example.com>
