--- a/solar-control/config.yaml
+++ b/solar-control/config.yaml
@@ -10,31 +10,11 @@ arch:
   - aarch64
   - amd64
   - i386
-ports:
-  8080/tcp: 8080
 init: false
 map:
   - share:rw
 options:
   message: "Hello world..."
-  hass_url: "http://supervisor/core"
 schema:
   message: "str?"
-  hass_url: "str?"
-image: "ghcr.io/chrismelba/{arch}-addon-solar-optimiser"
-panel_icon: "mdi:solar-power"
-panel_admin: true
-startup: application
-boot: auto
-webui: "http://[HOST]:[PORT:8080]"
-watchdog: "http://[HOST]:[PORT:8080]/api/status"
-ingress: true
-ingress_port: 8080
-ingress_entry: /
-homeassistant_api: true
-hassio_api: true
-hassio_role: admin
-hassio_dns: true
-services:
-  - mqtt:need
-  - hassio:need
+image: "ghcr.io/chrismelba/{arch}-addon-solar-control"
