--- a/solar-control/config.yaml
+++ b/solar-control/config.yaml
@@ -27,3 +27,16 @@ ingress_entry: /
 homeassistant_api: true
 # Add data persistence configuration
 data: true
+# Add Nginx configuration
+webui: true
+webui_config:
+  server:
+    listen: 8080
+    server_name: localhost
+    location / {
+      proxy_pass http://localhost:8080;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
