added nginx perms

--- a/solar-control/Dockerfile
+++ b/solar-control/Dockerfile
@@ -27,6 +27,8 @@ RUN mkdir -p /data && \
 # Create Nginx configuration directory
 RUN mkdir -p /etc/nginx/http.d && \
     chmod -R 755 /etc/nginx
+RUN mkdir -p /var/lib/nginx/logs /var/lib/nginx/tmp/client_body && \
+    chmod -R 755 /var/lib/nginx
 
 # Copy root filesystem
 COPY rootfs /
