--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -1,19 +1,42 @@
-server {
-    listen 8080;
-    server_name localhost;
+user  nginx;
+worker_processes  auto;
+error_log  /data/nginx/logs/error.log warn;
+pid        /data/nginx/nginx.pid;
 
-    location / {
-        proxy_pass http://localhost:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+events {
+    worker_connections  1024;
+}
 
-    # Serve static files
-    location /static/ {
-        alias /usr/bin/static/;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    # Set client body temp path
+    client_body_temp_path  /data/nginx/tmp/client_body;
+
+    # Logging/access settings (optional).
+    access_log  /data/nginx/logs/access.log;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen 8080;
+        server_name localhost;
+
+        location / {
+            proxy_pass http://localhost:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Serve static files
+        location /static/ {
+            alias /usr/bin/static/;
+            expires 30d;
+            add_header Cache-Control "public, no-transform";
+        }
     }
-} 
+}
