just don't run nginx for now

--- a/solar-control/Dockerfile
+++ b/solar-control/Dockerfile
@@ -24,18 +24,15 @@ RUN mkdir -p /data && \
     chown -R root:root /data && \
     chmod -R 755 /data
 
-# Create your custom Nginx directories under /data and adjust permissions
+# Create your custom Nginx directories under /data for logs and temporary files
 RUN mkdir -p /data/nginx/logs /data/nginx/tmp/client_body && \
     chmod -R 755 /data/nginx
 
-# Optionally remove default Nginx directories if not needed
-# RUN rm -rf /var/lib/nginx
-
-# Create Nginx configuration directories (keep original if needed)
+# Create Nginx configuration directories (if needed from your setup)
 RUN mkdir -p /etc/nginx/http.d && \
     chmod -R 755 /etc/nginx
 
-# Copy root filesystem (assumes you provide your nginx config override in rootfs)
+# Copy root filesystem, which now contains your custom nginx.conf and server config
 COPY rootfs /
 
 # Make the Python script executable
