nginx was  still using the default files

--- a/solar-control/rootfs/etc/nginx/nginx.conf
+++ b/solar-control/rootfs/etc/nginx/nginx.conf
@@ -8,6 +8,10 @@ events {
 
 http {
     client_body_temp_path /data/nginx/tmp/client_body;
+    proxy_temp_path /data/nginx/tmp/proxy;
+    fastcgi_temp_path /data/nginx/tmp/fastcgi;
+    uwsgi_temp_path /data/nginx/tmp/uwsgi;
+    scgi_temp_path /data/nginx/tmp/scgi;
 
     include       mime.types;
     default_type  application/octet-stream;
