AI thinks it understands the ingress issue

--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -2,18 +2,41 @@ server {
     listen 8080;
     server_name localhost;
 
+    # Increase max body size for larger requests
+    client_max_body_size 10M;
+
+    # Handle ingress requests
     location / {
         proxy_pass http://localhost:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Ingress specific headers
+        proxy_set_header X-Ingress-Path $http_x_ingress_path;
+        proxy_set_header X-Ingress-Port $http_x_ingress_port;
+        proxy_set_header X-Ingress-Entry $http_x_ingress_entry;
+        
+        # Handle WebSocket connections
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # Increase timeouts for long-running requests
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 86400s;
     }
 
-    # Serve static files
+    # Serve static files with proper caching
     location /static/ {
         alias /usr/bin/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        
+        # Add CORS headers for static content
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, OPTIONS";
+        add_header Access-Control-Allow-Headers "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
     }
 }
