made changes in flask to handle ingress

--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -44,8 +44,8 @@ server {
     }
 
     # Serve static files with proper caching
-    location /static/ {
-        root /usr/bin/;
+    location ~ ^/static/(.*)$ {
+        alias /usr/bin/static/$1;
         expires 30d;
         add_header Cache-Control "public, no-transform";
         
