actually read the ingress details

--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -1,6 +1,10 @@
 server {
-    listen 8080;
+    listen 8099;
     server_name localhost;
+
+    # Security: Only allow connections from Home Assistant ingress
+    allow 172.30.32.2;
+    deny all;
 
     # Increase max body size for larger requests
     client_max_body_size 10M;
