trying again to fix ingress

--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -9,19 +9,15 @@ server {
     # Increase max body size for larger requests
     client_max_body_size 10M;
 
-    # Handle OPTIONS requests for CORS
-    location / {
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
+    # Serve static files directly
+    location /static/ {
+        alias /usr/bin/static/;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
 
-        proxy_pass http://localhost:5000;
+    location / {
+        proxy_pass http://localhost:8099;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -40,27 +36,5 @@ server {
         # Increase timeouts for long-running requests
         proxy_read_timeout 86400s;
         proxy_send_timeout 86400s;
-
-        # Handle subpaths for ingress
-        proxy_redirect off;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Prefix $http_x_ingress_path;
-    }
-
-    # Serve static files with proper caching
-    location ~ ^/static/(.*)$ {
-        alias /usr/bin/static/$1;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-        
-        # Add CORS headers for static content
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, OPTIONS";
-        add_header Access-Control-Allow-Headers "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
-        
-        # Handle subpaths for ingress
-        proxy_redirect off;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Prefix $http_x_ingress_path;
     }
 }
