moving rules that i don't think will help

--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -2,21 +2,30 @@ server {
     listen 8099;
     server_name localhost;
 
-    # Security: Only allow connections from Home Assistant ingress
-    allow 172.30.32.2;
-    deny all;
-
     # Increase max body size for larger requests
     client_max_body_size 10M;
 
     # Serve static files directly
     location /static/ {
+        # Security: Only allow connections from Home Assistant ingress
+        allow 172.30.32.2;
+        deny all;
+
         alias /usr/bin/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        
+        # Add CORS headers for static content
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, OPTIONS";
+        add_header Access-Control-Allow-Headers "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
     }
 
     location / {
+        # Security: Only allow connections from Home Assistant ingress
+        allow 172.30.32.2;
+        deny all;
+
         proxy_pass http://localhost:8099;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
