trying to debug nginx

--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -7,8 +7,10 @@ server {
 
     # Serve static files directly
     location /static/ {
-        # Security: Only allow connections from Home Assistant ingress
-        allow 172.30.32.2;
+        # Security: Allow both Home Assistant ingress and web interface
+        allow 172.30.32.2;  # Home Assistant ingress
+        allow 127.0.0.1;    # Localhost
+        allow 192.168.20.0/24;  # Local network
         deny all;
 
         alias /usr/bin/static/;
@@ -22,8 +24,10 @@ server {
     }
 
     location / {
-        # Security: Only allow connections from Home Assistant ingress
-        allow 172.30.32.2;
+        # Security: Allow both Home Assistant ingress and web interface
+        allow 172.30.32.2;  # Home Assistant ingress
+        allow 127.0.0.1;    # Localhost
+        allow 192.168.20.0/24;  # Local network
         deny all;
 
         proxy_pass http://localhost:8099;
