--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -1,16 +1,15 @@
 server {
     listen 8099;
-    server_name localhost;
+    allow 172.30.32.2;
+    deny all;
 
     # Increase max body size for larger requests
     client_max_body_size 10M;
 
     # Serve static files directly
     location /static/ {
-        # Security: Allow both Home Assistant ingress and web interface
-        allow 172.30.32.2;  # Home Assistant ingress
-        allow 127.0.0.1;    # Localhost
-        allow 192.168.20.0/24;  # Local network
+        # Security: Only allow connections from Home Assistant ingress
+        allow 172.30.32.2;
         deny all;
 
         alias /usr/bin/static/;
@@ -24,13 +23,11 @@ server {
     }
 
     location / {
-        # Security: Allow both Home Assistant ingress and web interface
-        allow 172.30.32.2;  # Home Assistant ingress
-        allow 127.0.0.1;    # Localhost
-        allow 192.168.20.0/24;  # Local network
+        # Security: Only allow connections from Home Assistant ingress
+        allow 172.30.32.2;
         deny all;
 
-        proxy_pass http://localhost:8099;
+        proxy_pass http://localhost:5000;  # Changed from 8099 to 5000
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
