--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -8,26 +8,14 @@ server {
 
     # Serve static files directly
     location /static/ {
-        # Security: Only allow connections from Home Assistant ingress
-        allow 172.30.32.2;
-        deny all;
-
         alias /usr/bin/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
-        
-        # Add CORS headers for static content
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, OPTIONS";
-        add_header Access-Control-Allow-Headers "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
     }
 
+    # Proxy all other requests to Flask
     location / {
-        # Security: Only allow connections from Home Assistant ingress
-        allow 172.30.32.2;
-        deny all;
-
-        proxy_pass http://localhost:5000;  # Changed from 8099 to 5000
+        proxy_pass http://localhost:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
