changed the way we handle ingress paths

--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -8,6 +8,9 @@ server {
 
     # Serve static files directly
     location /static/ {
+        # Remove the ingress path prefix if present
+        rewrite ^/api/hassio_ingress/[^/]+/static/(.*)$ /static/$1 break;
+        
         alias /usr/bin/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
@@ -15,6 +18,9 @@ server {
 
     # Proxy all other requests to Flask
     location / {
+        # Remove the ingress path prefix if present
+        rewrite ^/api/hassio_ingress/[^/]+/(.*)$ /$1 break;
+        
         proxy_pass http://localhost:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
