trying  to copy deconz design

--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -1,16 +1,23 @@
 server {
-    listen 8099;
+    listen 8099 default_server;
     allow 172.30.32.2;
     deny all;
 
-    # Increase max body size for larger requests
-    client_max_body_size 10M;
+    server_name _;
+    access_log /dev/stdout combined;
+    error_log /dev/stdout info;
+
+    client_max_body_size 4G;
+    keepalive_timeout 5;
+
+    # Map for WebSocket upgrade
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
 
     # Serve static files directly
     location /static/ {
-        # Remove the ingress path prefix if present
-        rewrite ^/api/hassio_ingress/[^/]+/static/(.*)$ /static/$1 break;
-        
         alias /usr/bin/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
@@ -18,27 +25,22 @@ server {
 
     # Proxy all other requests to Flask
     location / {
-        # Remove the ingress path prefix if present
-        rewrite ^/api/hassio_ingress/[^/]+/(.*)$ /$1 break;
-        
         proxy_pass http://localhost:5000;
-        proxy_set_header Host $host;
+        proxy_redirect default;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+
         # Ingress specific headers
         proxy_set_header X-Ingress-Path $http_x_ingress_path;
         proxy_set_header X-Ingress-Port $http_x_ingress_port;
         proxy_set_header X-Ingress-Entry $http_x_ingress_entry;
-        
-        # Handle WebSocket connections
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # Increase timeouts for long-running requests
-        proxy_read_timeout 86400s;
-        proxy_send_timeout 86400s;
     }
 }
