--- a/solar-control/rootfs/etc/nginx/nginx.conf
+++ b/solar-control/rootfs/etc/nginx/nginx.conf
@@ -1,27 +1,29 @@
 user root;
-error_log  /data/nginx/logs/error.log warn;
-pid        /data/nginx/nginx.pid;
+error_log /dev/stdout info;
+pid /data/nginx/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
+    include mime.types;
+    default_type application/octet-stream;
+    sendfile on;
+    keepalive_timeout 65;
+    client_max_body_size 4G;
+
+    # Logging
+    access_log /dev/stdout combined;
+    error_log /dev/stdout info;
+
+    # Temp paths
     client_body_temp_path /data/nginx/tmp/client_body;
     proxy_temp_path /data/nginx/tmp/proxy;
     fastcgi_temp_path /data/nginx/tmp/fastcgi;
     uwsgi_temp_path /data/nginx/tmp/uwsgi;
     scgi_temp_path /data/nginx/tmp/scgi;
 
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    # Optional: override the default access log location
-    access_log  /data/nginx/logs/access.log;
-
-    sendfile        on;
-    keepalive_timeout  65;
-
-    # Include any additional configuration files
+    # Include additional configuration files
     include /etc/nginx/http.d/*.conf;
 }
