--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -25,7 +25,7 @@ server {
 
     # Proxy all other requests to Flask
     location / {
-        proxy_pass http://localhost:5000;
+        proxy_pass http://127.0.0.1:5000;
         proxy_redirect default;
 
         proxy_http_version 1.1;
