might have forgot to proxy the api to  flask

--- a/solar-control/rootfs/etc/nginx/http.d/default.conf
+++ b/solar-control/rootfs/etc/nginx/http.d/default.conf
@@ -51,6 +51,7 @@ server {
 
     # Handle CORS preflight requests
     location /api/ {
+        # Handle CORS preflight requests
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
@@ -60,5 +61,29 @@ server {
             add_header 'Content-Type' 'text/plain charset=UTF-8';
             return 204;
         }
+
+        # Proxy all other /api/ requests to Flask
+        proxy_pass http://127.0.0.1:5000;
+        proxy_redirect default;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+
+        # Ingress specific headers
+        proxy_set_header X-Ingress-Path $http_x_ingress_path;
+        proxy_set_header X-Ingress-Port $http_x_ingress_port;
+        proxy_set_header X-Ingress-Entry $http_x_ingress_entry;
+
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-Requested-With, X-Ingress-Path';
     }
 }
