--- a/solar-control/config.yaml
+++ b/solar-control/config.yaml
@@ -4,6 +4,7 @@ version: "1.3.67"
 slug: "solar-control"
 description: "Solar Control add-on"
 url: "https://github.com/chrismelba/solar-control"
+panel_icon: "mdi:solar-power-variant"
 arch:
   - armhf
   - armv7
