--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -64,7 +64,7 @@ jobs:
     strategy:
       matrix:
         addon: ${{ fromJson(needs.init.outputs.changed_addons) }}
-        arch: ["amd64"]
+        arch: ["amd64", "arm64", "armhf", "i386", "aarch64"]
     permissions:
       contents: read
       packages: write
