--- a/solar-control-dev/config.yaml
+++ b/solar-control-dev/config.yaml
@@ -1,7 +1,7 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-config
-name: "Solar Control"
-version: "1.3.70"
-slug: "solar-control"
+name: "Solar Control Dev"
+version: "1.3.71"
+slug: "solar-control-dev"
 description: "Solar Control add-on"
 url: "https://github.com/chrismelba/solar-control"
 panel_icon: "mdi:solar-power-variant"
@@ -19,7 +19,7 @@ options:
 schema:
   message: "str?"
   debug_level: "str?"
-image: "ghcr.io/chrismelba/{arch}-addon-solar-control"
+image: "ghcr.io/chrismelba/{arch}-addon-solar-control-dev"
 ingress: true
 ingress_port: 8099
 homeassistant_api: true
