--- a/solar-control-dev/rootfs/etc/nginx/nginx.conf
+++ b/solar-control-dev/rootfs/etc/nginx/nginx.conf
@@ -1,6 +1,6 @@
 user root;
-error_log /dev/stdout info;
-pid /data/nginx/nginx.pid;
+error_log /dev/stderr info;
+pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -13,16 +13,16 @@ http {
     keepalive_timeout 65;
     client_max_body_size 4G;
 
-    # Logging
+    # Logging - all logs to stdout/stderr
     access_log /dev/stdout combined;
-    error_log /dev/stdout info;
+    error_log /dev/stderr info;
 
-    # Temp paths
-    client_body_temp_path /data/nginx/tmp/client_body;
-    proxy_temp_path /data/nginx/tmp/proxy;
-    fastcgi_temp_path /data/nginx/tmp/fastcgi;
-    uwsgi_temp_path /data/nginx/tmp/uwsgi;
-    scgi_temp_path /data/nginx/tmp/scgi;
+    # Temp paths - using /tmp which should be writable
+    client_body_temp_path /tmp/nginx/client_body;
+    proxy_temp_path /tmp/nginx/proxy;
+    fastcgi_temp_path /tmp/nginx/fastcgi;
+    uwsgi_temp_path /tmp/nginx/uwsgi;
+    scgi_temp_path /tmp/nginx/scgi;
 
     # Include additional configuration files
     include /etc/nginx/http.d/*.conf;
