nginx now wants data file

--- a/solar-control-dev/Dockerfile
+++ b/solar-control-dev/Dockerfile
@@ -16,17 +16,23 @@ RUN \
 RUN \
     mkdir -p /run/nginx && \
     mkdir -p /usr/bin/static/css /usr/bin/static/js && \
+    mkdir -p /data && \
+    mkdir -p /data/nginx/logs /data/nginx/tmp/client_body && \
     mkdir -p /etc/nginx/http.d && \
-    mkdir -p /tmp/nginx
+    mkdir -p /var/lib/nginx && \
+    mkdir -p /var/lib/nginx/logs
 
 # Set permissions
 RUN \
-    chown -R nginx:nginx /run/nginx && \
-    chown -R nginx:nginx /tmp/nginx && \
+    chown -R root:root /data && \
+    chmod -R 755 /data && \
+    chmod -R 755 /data/nginx && \
     chmod -R 755 /etc/nginx && \
     chmod -R 755 /usr/bin/static && \
-    chmod -R 755 /run/nginx && \
-    chmod -R 755 /tmp/nginx
+    chown -R root:root /var/lib/nginx && \
+    chmod -R 755 /var/lib/nginx && \
+    chmod -R 755 /var/lib/nginx/logs && \
+    chmod -R 755 /run/nginx
 
 # Copy root filesystem
 COPY rootfs /
@@ -37,5 +43,5 @@ RUN \
     chmod a+x /etc/services.d/solar-control/run && \
     chmod a+x /etc/services.d/solar-control/finish
 
-# Launch nginx
-CMD [ "nginx", "-g", "daemon off;" ]
+# Launch nginx with debug options
+CMD [ "nginx", "-g", "daemon off;error_log /dev/stdout debug;" ]
